crates/nash-solve/tests/snapshots/testing__expression_statement_requires_unit.snap
---
source: crates/nash-solve/tests/testing.rs
description: "module Main exposing (public)\npublic = ()\ntests\n    test \"type\" = do\n        (\\x -> x)\n        ()\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:5:10]
 4 │     test "type" = do
 5 │         (\x -> x)
   ·          ───┬───
   ·             ╰── destructuring pattern
 6 │         ()
   ╰────
