crates/nash-solve/tests/snapshots/testing__final_statement_requires_unit.snap
---
source: crates/nash-solve/tests/testing.rs
description: "module Prop exposing (..)\ntype generator 'a = Generator 'a\nunit = Generator ()\n\nmodule Main exposing (public)\npublic = ()\ntests\n    test \"type\" = do\n        \\x -> x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:5:9]
 3 │ tests
 4 │     test "type" = do
 5 │         \x -> x
   ·         ───┬───
   ·            ╰── test body (which must return unit)
   ╰────
