crates/nash-solve/tests/snapshots/testing__via_requires_fuzzer.snap
---
source: crates/nash-solve/tests/testing.rs
description: "module Fuzz exposing (..)\ntype fuzzer 'a = Fuzzer 'a\nunit = Fuzzer ()\n\nmodule Main exposing (public)\npublic = ()\ntests\n    prop \"type\" =\n        let x via () in\n        do\n            x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `Fuzz.fuzzer 'a`, found `unit`.
   ╭─[Main.nash:5:19]
 4 │     prop "type" =
 5 │         let x via () in
   ·                   ─┬
   ·                    ╰── property generator (which must be a fuzzer)
 6 │         do
   ╰────
