crates/nash-solve/tests/snapshots/testing__via_requires_generator.snap
---
source: crates/nash-solve/tests/testing.rs
description: "module Main exposing (public)\npublic = ()\ntests\n    prop \"type\" =\n        let x via () in\n        do\n            x\n"
info: diagnostic
---
nash::type::missing_impl

  × No impl for `Literal.FromUnit (Prop.generator unit)`.
   ╭─[Main.nash:5:19]
 4 │     prop "type" =
 5 │         let x via () in
   ·                   ─┬
   ·                    ╰── required by `fromUnit`
 6 │         do
   ╰────
  help: Available impl heads:

            unit

        Import or define an impl for `Literal.FromUnit (Prop.generator unit)`.
